--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,6 @@ build_image:
   before_script:
    - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
   script:
-   - docker build -t $DOCKER_IMAGENAME_DB_SERVICE:$DOCKER_VERSION ./database/
+   - docker build -t $DOCKER_IMAGENAME_DB_SERVICE:$DOCKER_VERSION .
 
    - docker push $DOCKER_IMAGENAME_DB_SERVICE:$DOCKER_VERSION
